Restore original as etcd check working inside container.

--- a/roles/etcd/files/etcd.yaml
+++ b/roles/etcd/files/etcd.yaml
@@ -34,10 +34,8 @@ spec:
      - mountPath: /etc/localtime
        name: host-localtime
     livenessProbe:
-      tcpSocket:
-        port: 2379
+      exec:
       initialDelaySeconds: 45
-      timeoutSeconds: 10
   volumes:
   - name: master-config
     hostPath:
